<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hevs.labo.projetandroid.Create_artwork">

    <item android:id="@+id/list_artwork_menu"
        android:title="@string/artworks"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

    <item android:id="@+id/cancelartworkcreated_menu"
        android:title="@string/cancelartworkcreated_menu"
        android:icon="@mipmap/cancelblue"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"/>


    <item android:id="@+id/saveartworkcreated_menu"
        android:title="@string/saveartworkcreated_menu"
        android:icon="@mipmap/saveblue"
        android:orderInCategory="3"
        app:showAsAction="ifRoom|withText"/>
</menu>
