<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/tv_title_roomName_layout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="40"
          android:text="@string/name"
          android:textSize="20dp"
          android:textColor="#000010"
          android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_title_roomSize_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/size"
            android:textColor="#000010"
            android:textSize="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_title_roomOccupated_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/occupated"
            android:textColor="#000010"
            android:layout_marginTop="10dp"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>