<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hevs.labo.projetandroid.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_settings_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_weight="40"
                android:text="@string/language"
                android:textColor="#000010"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/rg_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_weight="60">

                <RadioButton
                    android:id="@+id/rb_settings_french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/french"
                    android:textColor="#000010"
                    android:textSize="15dp" />

                <RadioButton
                    android:id="@+id/rb_settings_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/english"
                    android:textColor="#000010"
                    android:textSize="15dp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_settings_rooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_weight="40"
                android:text="@string/rooms"
                android:textColor="#000010"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_manage_rooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:onClick="show_list_room"
                android:text="@string/manage" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


