<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titre_list_artiste_Lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="45"
            android:text="@string/lastname"
            android:textColor="#000010"
            android:textSize="20dp"
            />

        <!--<TextView
            android:id="@+id/titre_list_artiste_Firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="25"
            android:text="@string/firstname"
            android:textColor="#000010"
            android:textSize="20dp"
            />-->

        <TextView
            android:id="@+id/titre_list_artiste_Pseudo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="30"
            android:text="@string/pseudo"
            android:textColor="#000010"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/titre_list_expose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="25"
            android:gravity="right"
            android:text="@string/exposed"
            android:textColor="#000010"
            android:textSize="20dp"
            />

    </LinearLayout>



</LinearLayout>