<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context="hevs.labo.projetandroid.Modify_artist">

    <!--1ère ligne : nom de l'artiste, bouton annuler, bouton sauvegarder-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nom_artiste"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="70"
            android:gravity="center"
            android:text="@string/modify_artist"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <!--Dans Action Bar désormais-->

  <!--      <ImageButton
            android:id="@+id/button_cancelModif"
            style="@style/imageButton"
            android:src="@mipmap/cancel" />

        <ImageButton
            android:id="@+id/button_saveModif"
            style="@style/imageButton"
            android:src="@mipmap/save" /> -->

    </LinearLayout>

    <!--LinearLayout central-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_nameArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="40"
                android:text="@string/lastname"
                android:textColor="#000010"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText_lastnameArtistModiy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_fistnameArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="40"
                android:text="@string/firstname"
                android:textColor="#000010"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/editText_firstsnameArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_pseudoArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="40"
                android:text="@string/pseudo"
                android:textColor="#000010"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText_pseudoArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_birthArtistCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="40"
                android:text="@string/birthdate"
                android:textColor="#000010"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/editText_birthArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_deathArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="40"
                android:text="@string/deathdate"
                android:textColor="#000010"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/editText_deathArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_mvtArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="40"
                android:text="@string/movement"
                android:textColor="#000010"
                android:textSize="20dp" />


            <Spinner
                android:id="@+id/spinner_mvtArtistModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView_photoArtistModify"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/imageButton_btnDownloadArtistModify"
                style="@style/imageButton"
                android:src="@mipmap/download" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
